--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project(qtjudge)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Wextra")
-find_package(Threads REQUIRED)
 add_executable(test test.cpp)
-target_link_libraries(test Threads::Threads -lunwind -lunwind-generic)
+if (NOT WIN32)
+    target_link_libraries(test dl)
+endif()
+
