--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,10 @@ cmake_minimum_required(VERSION 3.1.0)
 project(qtjudge)
 
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Wextra")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Wextra -fnon-call-exceptions")
+find_package(Threads)
 add_executable(test test.cpp)
+target_link_libraries(test Threads::Threads)
 if (NOT WIN32)
     target_link_libraries(test dl)
 endif()
