--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,11 @@
 cmake_minimum_required(VERSION 3.1.0)
-project(qtjudge)
+project(test)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Wextra")
 find_package(Threads)
-add_executable(test test.cpp)
+include_directories(student tests)
+add_executable(test tests/test.cpp)
 target_link_libraries(test Threads::Threads)
 if (NOT WIN32)
     target_link_libraries(test dl)
